--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
     "description": "Backend for Couple Game",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js"
+        "start": " node api-server.js",
+        "dev": "nodemon api-server.js"
     },
     "dependencies": {
         "@supabase/supabase-js": "^2.93.3",
+        "axios": "^1.13.4",
         "bcrypt": "^6.0.0",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
+        "expo-constants": "^18.0.13",
+        "expo-device": "^8.0.10",
+        "expo-notifications": "^0.32.16",
+        "expo-server-sdk": "^5.0.0",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.3",
         "socket.io": "^4.7.4"
